<resources>
    <string name="app_name">HelloTwitter</string>

    <string name="hello_twitter">Hello Twitter!</string>
    <string name="lbl_username">UserName</string>
    <string name="lbl_enter_username">Enter your Username</string>
    <string name="lbl_pwd">Password</string>
    <string name="lbl_enter_pwd">Enter your Password</string>
    <string name="lbl_login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tweet_list">TweetListActivity</string>
    <string name="no_tweet_found">No Tweets Found</string>
    <string name="hello_world">Hello world!</string>


</resources>
