<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/hello_twitter" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:id="@+id/uname_block"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:text="@string/lbl_username"
            android:textColor="#ff000000"
            android:textSize="16sp"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/fId_username"
            android:text="@string/lbl_enter_username"
            android:layout_marginLeft="8dp"
            android:textSize="13sp"
            android:inputType="textEmailAddress"
            android:layout_gravity="center_vertical"
            android:paddingLeft="5dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uname_block"
        android:id="@+id/pwd_block"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_pwd"
            android:id="@+id/pwd"
            android:textColor="#ff000000"
            android:textSize="16sp"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/fId_pwd"
            android:layout_weight="1"
            android:text="@string/lbl_enter_pwd"
            android:layout_marginLeft="8dp"
            android:textSize="13sp"
            android:inputType="textPassword"
            android:layout_gravity="center_vertical"
            android:paddingLeft="5dp" />
    </LinearLayout>

    <Button
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:text="@string/lbl_login"
        android:id="@+id/btn_login"
        android:layout_below="@+id/pwd_block"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="13sp"
        android:textStyle="bold" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_below="@+id/btn_login"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
